syntax ="proto3";
option java_outer_classname="BackPackModel";
message BackPackModelMessage{
  //定义枚举类型
  enum DateType{
    AbandonRequest=0;//在proto3 要求enum的编号从0开始
    BackPackRequest=1;
    UseRequest=2;
    AbandonResponse=3;
    BackPackResponse=4;
    UseResponse=5;
    AddArticleRequest=6;
    AddArticleResponse=7;
    FindAllCanGetRequest=8;
    GetArticleFromFloorRequest=9;
    FindAllCanGetResponse=10;
    GetArticleFromFloorResponse=11;
    CheckMoneyNumberRequest=12;
    BuyGoodsRequest=13;
    CheckMoneyNumberResponse=14;
    BuyGoodsResponse=15;
    FindAllGoodsRequest=16;
    FindAllGoodsResponse=17;
    GoodsDto=18;
    SortBackPackRequest=19;
  }
  //用date_type来标识传的是哪一个枚举类型
  DateType data_type=1;
  //表示每次枚举类型最多只能出现其中一个，节省空间
  oneof dateBody{
    BackPackRequest backPackRequest=2;
    AbandonRequest abandonRequest=3;
    UseRequest useRequest=4;
    AbandonResponse abandonResponse=5;
    BackPackResponse backPackResponse=6;
    UseResponse useResponse=7;
    AddArticleRequest addArticleRequest=8;
    AddArticleResponse addArticleResponse=9;
    FindAllCanGetRequest findAllCanGetRequest=10;
    GetArticleFromFloorRequest getArticleFromFloorRequest=11;
    FindAllCanGetResponse findAllCanGetResponse=12;
    GetArticleFromFloorResponse getArticleFromFloorResponse=13;
    CheckMoneyNumberRequest checkMoneyNumberRequest=14;
    BuyGoodsRequest buyGoodsRequest=15;
    CheckMoneyNumberResponse checkMoneyNumberResponse=16;
    BuyGoodsResponse buyGoodsResponse=17;
    FindAllGoodsRequest findAllGoodsRequest=18;
    FindAllGoodsResponse findAllGoodsResponse=19;
    GoodsDto goodsDto=20;
      SortBackPackRequest sortBackPackRequest=21;
  }
}
message SortBackPackRequest{

}
message FindAllGoodsRequest{

}
message FindAllGoodsResponse{
  repeated GoodsDto goodsDtos=1;
}
message GoodsDto{
  int32 id=1;
  int32 articleMessageId=2;
  int32 articleTypeId=3;
  int32 num=4;
  int32 nowNum=5;
  int32 price=6;
}
message CheckMoneyNumberRequest{

}
message BuyGoodsRequest{
  int32 goodsId=1;
  int32 num=2;
}
message CheckMoneyNumberResponse{
  int32 money=1;
}
message BuyGoodsResponse{

}
message AbandonRequest{
  int32 articleId=1;
  int32 number=2;
}
message BackPackRequest{
}
message UseRequest{
  int32 articleId=1;
}
message FindAllCanGetRequest{
}
message GetArticleFromFloorRequest{
  int32 index=1;
}
message FindAllCanGetResponse{
    repeated ArticleFloorDto articleFloorDto=1;
}
message GetArticleFromFloorResponse{
}
message AbandonResponse{
}
message BackPackResponse{
  repeated ArticleDto articleDtos=1;
}
message UseResponse{
}
message AddArticleRequest{
  int32 id=1;
  int32 articleType=2;
  int32 number=3;
}
message AddArticleResponse{

}
message ArticleFloorDto{
  //地面下标
  int32 floorIndex=1;
  //物品id
  int32 id=2;
  //数量
  int32 quantity=3;
  //物品类型
  int32 articleType=4;
  //耐久度
  int32 nowDurability=5;
  //装备实例id
  int32 equipmentId=6;
}

message ArticleDto{
  //背包中物品id
  int32 articleId=1;
  //物品id
  int32 id=2;
  //装备实例id
  int32 equipmentId=3;
  //数量
  int32 quantity=4;
  //物品类型
  int32 articleType=5;
  //耐久度
  int32  nowDurability=6;
}